# ErrorDecodeAI

./: .env  .env.example  LICENSE  README.md  analysis_log.csv  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: adls_logger.py  ai_analyzer.py  csv_logger.py  exceptions.py  notifier.py
tests/: test_notify.py
